--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Web Development Portfolio">
+    <meta name="author" content="Connie Stewart">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Custom Bootstrap Website</title>
+    <title>Connie Stewart / Portfolio</title>
 
-    <!-- This is our Google Arvo font and Font Awesome-->
-    <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>    
+    <!-- Google Font Josefin Sans and Font Awesome -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +24,7 @@
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">	
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -31,12 +32,12 @@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
 
-  <body data-spy="scroll" data-target=".navbar-collapse" data-offset="100">
+  <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -47,102 +48,67 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#jumbotron"><img src="images/top_logo.png" title="One Million Lines" alt="One Million Lines"></a>
+          <a class="navbar-brand" href="#">Connie Stewart / Web Developer </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#who">WHO WE ARE</a></li>
-            <li><a href="#get-Involved">GET INVOLVED</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeU_RelWEnmlTeyxqwbXEXXMQ_OQVw7QO8Oc_W8fXw6gR9CUg/viewform" target="_blank">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div id="jumbotron" class="jumbotron">
+    <div class="jumbotron">
       <div class="container">
-          <h1>Our goal is to inspire <br>Tallahassee to write 1,000,000<br> lines of code_</h1>
-          <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to write 1,000,000 lines of code_</p>
-          <p>
-          <a class="btn btn-danger btn-lg" href="#" role="button" data-toggle="modal" data-target="#myModal">Learn more &raquo;</a></p>
-          <a class="btn btn-danger btn-lg" href="https://gumroad.com/l/eJQtm">Buy now</a></p>
-
-          <!-- Modal -->
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Dh8XmvBZUiQ?showinfo=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-            </div>
-          </div>
-          <img src="images/code.png" title="Code.org logo" alt="Code.org">
+        <h1>Welcome to my world!</h1>
+        <h2>This portfolio is a work in progress</h2>
+        <p class="name">Connie Stewart<p>
+        <p>Web developer / Gilbert, Arizona</p>
+        <p><a class="btn btn-info btn-lg" href="about.html" target="_blank" role="button">Hire Me &raquo;</a></p>
       </div>
     </div>
 
-    <div id="who">
-      <div class="container homepage">
-        <img src="images/academy.png" alt="MASSIVE Academy" title="MASSIVE Academy">
-        <h2>Who We Are</h2>
-        <hr>
-        <p>We are <a href="http://www.massiveacademy.us" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
-      </div>
-    </div>
-
-    <div id="get-Involved">
-      <div class="container homepage">
-        <h2>Get Involved</h2>
-        <hr>
-        <div class="row">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-user fa-stack-1x fa-inverse"></i>
-            </span>
-            <h3>Students</h3>
-            <p>Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and we'll let you know how to get involved. </p>
-            <p><a class="btn btn-default" href="http://www.google.com"  target="_blank" role="button">Start Learning &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-           <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-            </span>
-            <h3>Educators</h3>
-            <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen. </p>
-            <p><a class="btn btn-default" href="images/hero_image.jpg" target="_blank" role="button">Join the Initiative &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-           <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-money fa-stack-1x fa-inverse"></i>
-            </span>
-            <h3>Sponsors</h3>
-            <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p>
-            <p><a class="btn btn-default" href="http://www.lds.org" target="_blank" role="button">Give Support &raquo;</a></p>
-          </div>
+    <div class="container homepage">
+      <h2>See Examples</h2>
+      <hr>
+      <div class="row">
+        <div class="col-md-4">
+        	<i class="fa fa-building fa-5x"></i>
+			<h3>Business Sites</h3>
+			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			<p><a class="btn btn-default" href="index_main.html" target="_blank" role="button">View details &raquo;</a></p>
         </div>
-      </div> <!-- /container -->
-    </div>
+        <div class="col-md-4">
+    		<i class="fa fa-wordpress fa-5x"></i>
+          <h3>Social Media Sites</h3>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="http://onmykneeswiththejapanese.blogspot.com/" target="_blank" role="button">View details &raquo;</a></p>
+       </div>
+        <div class="col-md-4">
+        <i class="fa fa-first-order fa-5x"></i>
+          <h3>Custom Sites</h3>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" href="http://www.google.com" target="_blank" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
 
-    <footer>
-      <div class="container">
-        <p><img src="images/one_million_bottom_brand.png" title="footer" alt="footer">
-        </p>
-      </div>
-      <div id="go-top">
-      <a href="#jumbotron"><i class="fa fa-chevron-circle-up fa-3x" aria-hidden="true" ></i></a>
-      </div>
-    </footer>
+      <hr>
+
+      <footer>
+        <p>&copy; 2016 Company, Inc.</p>
+      </footer>
+    </div> <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
