--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Welcome to my world!</h1>
-        <h2>This portfolio is a work in progress</h2>
-        <p class="name">Connie Stewart<p>
-        <p>Web developer / Gilbert, Arizona</p>
-        <p><a class="btn btn-info btn-lg" href="about.html" target="_blank" role="button">Hire Me &raquo;</a></p>
+	    <h1>Welcome to my world!</h1>
+	    <h2>This portfolio is a work in progress</h2>
+	    <p class="name">Connie Stewart<p>
+	    <p>Web developer / Gilbert, Arizona</p>
+	    <p><a class="btn btn-info btn-lg" href="about.html" target="_blank" role="button">Hire Me &raquo;</a></p>
       </div>
     </div>
 
@@ -91,7 +91,7 @@
         <i class="fa fa-first-order fa-5x"></i>
           <h3>Custom Sites</h3>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="http://www.google.com" target="_blank" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="http://pixiteapps.com/" target="_blank" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
